# AI-Agent-Grok-Trading-System

./: .env.example  .gitignore  Caddyfile  DEPLOYMENT.md  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: CLAUDE.md  INSTRUCTIONS.md
.config/: INSTRUCTIONS.md  PROJECT.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  run.py
backend/src/: config.py  models.py
backend/src/agent/: grok_client.py  reflections.py  trading_agent.py
backend/src/agent/prompts/: __init__.py  trading.py
backend/src/agent/tools/: __init__.py  definitions.py  executor.py
backend/src/api/: main.py  websocket.py
backend/src/api/routes/: __init__.py  agent.py  health.py  portfolio.py  trading.py
backend/src/broker/: ibkr_client.py
backend/src/database/: __init__.py  db.py  models.py
backend/src/market_data/: yahoo_finance.py
backend/src/scheduler/: __init__.py  trading_scheduler.py
backend/tests/: test_grok_connection.py  test_ibkr_connection.py
claude/: CLAUDE.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ActivityLog.tsx  AgentStatusCard.tsx  Header.tsx  PerformanceChart.tsx  PositionsTable.tsx  StatsPanel.tsx  index.ts
frontend/src/components/ui/: Icons.tsx
frontend/src/hooks/: useAgentState.ts
frontend/src/lib/: api.ts  providers.tsx  store.ts
frontend/src/types/: index.ts
scripts/: backup.sh  restore.sh  setup-vps.sh
(+9 files in other folders)
